haxe (1:3.4.4-1) unstable; urgency=medium

  * New upstream version.
    + Fix flash target broken when compiled with OCaml 4.05.
  * Bump Standards-Version to 4.1.1 (no changes).
  * Update d/watch to use the GitHub latest release page to avoid getting
    pre-release version.

 -- Andy Li <andy@onthewings.net>  Mon, 09 Oct 2017 09:50:21 +0800

haxe (1:3.4.3-1) unstable; urgency=low

  * New upstream version.
  * Remove hardening-* lintian overrides.
  * Bump Standards-Version to 4.1.0 (no changes).

 -- Andy Li <andy@onthewings.net>  Mon, 25 Sep 2017 13:38:07 +0800

haxe (1:3.4.2-1) unstable; urgency=low

  * New upstream version.
  * Fix d/watch.

 -- Andy Li <andy@onthewings.net>  Thu, 23 Mar 2017 10:39:18 +0800

haxe (1:3.4.0-1) unstable; urgency=low

  * New upstream version.
    + Depends on PCRE.
    + There is no bundled jQuery source file, thus, remove +dfsg tag.
    + Remove dependencies of libjs-jquery and libjs-swfobject.
    + Remove upstream applied patch.
    + Update d/copyright.
  * Update d/watch and get-orig-source target (no +dfsg).
  * Bump Standards-Version to 3.9.8 (no changes).

 -- Andy Li <andy@onthewings.net>  Thu, 02 Feb 2017 09:27:56 +0800

haxe (1:3.2.1+dfsg-1) unstable; urgency=low

  * New upstream version.

 -- Andy Li <andy@onthewings.net>  Wed, 14 Oct 2015 10:42:48 +0800

haxe (1:3.2.0+dfsg-1) unstable; urgency=low

  * Adopt package (Closes: #799151).
    + Set maintainer to myself.
  * Set Vcs-* fields to Haxe Foundation haxe-debian git repo.
  * New upstream version.
    + Update neko version dependency.
  * Remove outdated and discontinued emacs haxe mode.
  * Clean up copyright.
    + Remove entries of removed files.
  * Update d/watch and get-orig-source target
    + Create tar manually to include git submodules.

 -- Andy Li <andy@onthewings.net>  Wed, 26 Aug 2015 15:01:06 +0800

haxe (1:3.0.0~svn6707+dfsg-1) unstable; urgency=medium

  * Adopt as Debian Flash Team (Closes: #742052).