@@ -3,6 +3,7 @@ haxe (1:3.4.4-1) unstable; urgency=medium
   * New upstream version.
     + Fix flash target broken when compiled with OCaml 4.05.
   * Bump Standards-Version to 4.1.1 (no changes).
+  * Update d/rules to use /usr/share/dpkg/pkg-info.mk to get source version.
   * Update d/watch to use the GitHub latest release page to avoid getting
     pre-release version.
 
